commit deux creation du serveur 1

--- a/package.json
+++ b/package.json
@@ -1,13 +1,28 @@
 {
   "name": "commercial-erp-senegal",
   "version": "1.0.0",
-  "description": "",
+  "description": "Application web complète de gestion commerciale et comptable pour PME/TPE au Sénégal.",
   "main": "index.js",
   "scripts": {
+    "install:server": "cd server && npm install",
+    "install:client": "cd client && npm install",
+    "install:all": "npm install && npm run install:server && npm run install:client",
+    "start:server": "cd server && npm run dev",
+    "start:client": "cd client && npm start",
+    "dev": "concurrently \"npm run start:server\" \"npm run start:client\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+   "keywords": [
+    "erp",
+    "crm",
+    "react",
+    "node",
+    "senegal"
+  ],
+  "author": "Lib_Dev_Prod",
   "license": "ISC",
-  "type": "commonjs"
+  "type": "commonjs",
+  "devDependencies": {
+    "concurrently": "^9.2.0"
+  }
 }
